Add css styles and js scripts

--- a/vacation.html
+++ b/vacation.html
@@ -10,9 +10,13 @@
   <body>
     <body>
   <div class="container">
-    <h1>Sweet Destination</h1>
+    <h1>"Sweet Destination"</h1>
+      <img src="img/panorama.jpg" width="1100" height="200">
+    <br><br>
     <h4>Where should you go for your next destination?</h4>
+    <br>
     <h5>Let us help you decide</h5>
+    <br>
     <div class="form-group">
       <label for="first">Is this your first vacation?</label>
       <select class="form-control" id="first1">
@@ -47,7 +51,8 @@
         <option>Eating</option>
         <option>Sightseeing</option>
         <option>Shopping</option>
-        <option>Theme Parks</options>
+        <option>Theme Parks</option>
+        <option>Entertainment</option>
       </select>
     </div>
     <div class="form-group">
