--- a/vacation.html
+++ b/vacation.html
@@ -17,6 +17,7 @@
     <br>
     <h5>Let us help you decide</h5>
     <br>
+    
     <div class="form-group">
       <label for="first">Is this your first vacation?</label>
       <select class="form-control" id="first1">
@@ -64,23 +65,30 @@
       </select>
     </div>
 
+
+    <button class="btn btn-primary" type="button" id="button">Submit</button>
+
     <div id="lasvegas">
+      <center><h3>Your next destination is...</h3>
       <img src="img/lasvegas.jpg" width="400" height="200">
-      <p>The city of Entertainment</p>
+      <p>The city of Entertainment</p></center>
     </div>
     <div id="disneyland">
+      <center><h3>Your next destination is...</h3>
       <img src="img/disneyland.jpeg" width="400" height="200">
-      <p>The magical place on earth</p>
+      <p>The magical place on earth</p></center>
     </div>
     <div id="hawaii">
+      <center><h3>Your next destination is...</h3>
       <img src="img/hawaii.jpg" width="400" height="200">
-      <p>The paradise of the pacific</p>
+      <p>The paradise of the pacific</p></center>
     </div>
     <div id="house">
+      <center><h3>Your next destination is...</h3>
       <img src="img/house.jpg" width="400" height="200">
-      <p>No place like home</p>
+      <p>No place like home</p></center>
     </div>
-    <button class="btn btn-primary" type="button" id="button">Submit</button>
+
   </div>
 </body>
-</html
+</html>
